[project]
name = "langgraph-baseball"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ibm-watsonx-ai==1.4.1",
    "langchain==0.3.27",
    "langchain-core==0.3.78",
    "langchain-experimental>=0.3.4",
    "langchain-ibm==0.3.18",
    "langchain-ollama>=0.3.10",
    "langchain-openai==0.2.6",
    "langgraph==0.2.35",
    "pandas>=2.2.3",
    "typing-extensions==4.12.2",
]
